# alcremie

./: .envrc  CNAME  README.md  flake.nix  log  makefile  nix.org  pyproject.toml  setup.py  tests.org
alcremie/: __init__.org  __init__.py  alcremie.hy  alcremie.org
tests/: test-piping-first-macro-no-import.hy  test-piping-last-macro-no-import.hy  test-piping-macro.hy
